--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,8 +2,8 @@
 name = "pdfbull"
 version = "0.1.0"
 description = "A lightweight PDF reader"
-authors = ["you"]
-edition = "2021"
+authors = ["SV-stark"]
+edition = "2026"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
