--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,4 +28,7 @@ tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
 serde = { version = "1", features = ["derive"] }
 pdfium-render = "0.8"
+image = "0.25"
+tokio = { version = "1", features = ["full"] }
+rayon = "1.10"
 
