--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,10 +51,11 @@ jobs:
           Remove-Item -Recurse -Force onnxruntime.zip, onnx_temp
 
           # Download PP-OCRv5 English Models from Hugging Face
-          $base_url = "https://huggingface.co/marsena/paddleocr-onnx-models/resolve/main"
-          Invoke-WebRequest -Uri "$base_url/PP-OCRv5_server_det_infer.onnx" -OutFile "src-tauri/resources/ocr_models/en/det.onnx"
-          Invoke-WebRequest -Uri "$base_url/PP-OCRv5_server_rec_infer.onnx" -OutFile "src-tauri/resources/ocr_models/en/rec.onnx"
-          Invoke-WebRequest -Uri "$base_url/en_dict.txt" -OutFile "src-tauri/resources/ocr_models/en/keys.txt"
+          $base_url = "https://huggingface.co/monkt/paddleocr-onnx/resolve/main"
+          Invoke-WebRequest -Uri "$base_url/detection/v5/det.onnx" -OutFile "src-tauri/resources/ocr_models/en/det.onnx"
+          Invoke-WebRequest -Uri "$base_url/languages/english/rec.onnx" -OutFile "src-tauri/resources/ocr_models/en/rec.onnx"
+          # monkt repo uses dict.txt for the english dictionary
+          Invoke-WebRequest -Uri "$base_url/languages/english/dict.txt" -OutFile "src-tauri/resources/ocr_models/en/keys.txt"
 
       - name: Build and Release (Nightly)
         uses: tauri-apps/tauri-action@v0
