--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,8 @@ jobs:
           Invoke-WebRequest -Uri "$base_url/languages/english/rec.onnx" -OutFile "src-tauri/resources/ocr_models/en/rec.onnx"
           # monkt repo uses dict.txt for the english dictionary
           Invoke-WebRequest -Uri "$base_url/languages/english/dict.txt" -OutFile "src-tauri/resources/ocr_models/en/keys.txt"
+          # Download classification model for orientation correction
+          Invoke-WebRequest -Uri "$base_url/preprocessing/doc-orientation/model.onnx" -OutFile "src-tauri/resources/ocr_models/en/cls.onnx"
 
       - name: Build and Release (Nightly)
         uses: tauri-apps/tauri-action@v0
