--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tauri-app",
+  "name": "pdfbull",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "tauri": "tauri",
@@ -12,6 +12,6 @@
     "@tauri-apps/cli": "^2"
   },
   "dependencies": {
-    "@tauri-apps/plugin-dialog": "^2.6.0"
+    "@tauri-apps/plugin-dialog": "^2"
   }
 }
