--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/main.rs"
 slint-build = "1.15"
 
 [dependencies]
-slint = { version = "1.15", features = ["renderer-winit-skia"] }
+slint = { version = "1.15", features = ["renderer-winit-femtovg"] }
 rfd = "0.14"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
