Migrate from Slint to Iced UI framework
- Replace Slint with Iced 0.14 for the UI framework
- Update Cargo.toml dependencies (iced, tokio)
- Refactor main.rs to use Iced's application model
- Fix pdfium-render API compatibility issues
- Add pdfium.dll and errors.txt to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,10 @@ src-tauri/resources/
 *.rs.bk
 .cargo/
 
+# PDFium DLL and errors
+pdfium.dll
+errors.txt
+
 # Packages build artifacts
 packages/**/target/
 packages/**/*.rlib
