--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ rayon = "1.10"
 moka = { version = "0.12", features = ["sync"] }
 iced = { version = "0.14.0", features = ["image", "canvas", "tokio"] }
 tokio = { version = "1.43.0", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
