--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ path = "src/main.rs"
 rfd = "0.14"
 pdfium-render = "0.8"
 image = "0.25"
-rayon = "1.10"
 moka = { version = "0.12", features = ["sync"] }
 iced = { version = "0.14.0", features = ["image", "canvas", "tokio"] }
 tokio = { version = "1.43.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+dirs = "5"
