--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ tokio = { version = "1.43.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dirs = "5"
+rayon = "1.10"
+dark-light = "1.1"
