--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,6 +65,9 @@ jobs:
           Copy-Item -Path "onnxruntime.dll" -Destination "release_dist/"
           Copy-Item -Path "resources" -Destination "release_dist/resources" -Recurse
 
+      - name: Install NSIS
+        run: choco install nsis -y
+
       - name: Build NSIS Installer
         uses: joncloud/makensis-action@v4
         with:
