--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,12 +24,9 @@ jobs:
       - name: Rust cache
         uses: swatinem/rust-cache@v2
 
-      - name: Download Build Resources (PDFium, ONNX)
+      - name: Download Build Resources (PDFium)
         shell: pwsh
         run: |
-          # Create resources directory
-          mkdir -p resources/ocr_models/en
-          
           # Download PDFium (Required for pdfium-render)
           $pdfium_ver = "6899"
           $pdfium_url = "https://github.com/bblanchon/pdfium-binaries/releases/download/chromium%2F$pdfium_ver/pdfium-win-x64.tgz"
@@ -37,21 +34,6 @@ jobs:
           tar -xzf pdfium.tgz
           Move-Item -Path "bin/pdfium.dll" -Destination "./pdfium.dll" -Force
           Remove-Item -Recurse -Force pdfium.tgz, bin, include, lib
-
-          # Download ONNX Runtime (CPU)
-          $onnx_ver = "1.19.2"
-          $onnx_url = "https://github.com/microsoft/onnxruntime/releases/download/v$onnx_ver/onnxruntime-win-x64-$onnx_ver.zip"
-          Invoke-WebRequest -Uri $onnx_url -OutFile onnxruntime.zip
-          Expand-Archive -Path onnxruntime.zip -DestinationPath onnx_temp
-          Move-Item -Path "onnx_temp/onnxruntime-win-x64-$onnx_ver/lib/onnxruntime.dll" -Destination "./onnxruntime.dll" -Force
-          Remove-Item -Recurse -Force onnxruntime.zip, onnx_temp
-
-          # Download PP-OCRv5 English Models
-          $base_url = "https://huggingface.co/monkt/paddleocr-onnx/resolve/main"
-          Invoke-WebRequest -Uri "$base_url/detection/v5/det.onnx" -OutFile "resources/ocr_models/en/det.onnx"
-          Invoke-WebRequest -Uri "$base_url/languages/english/rec.onnx" -OutFile "resources/ocr_models/en/rec.onnx"
-          Invoke-WebRequest -Uri "$base_url/languages/english/dict.txt" -OutFile "resources/ocr_models/en/keys.txt"
-          Invoke-WebRequest -Uri "$base_url/preprocessing/doc-orientation/PP-LCNet_x1_0_doc_ori.onnx" -OutFile "resources/ocr_models/en/cls.onnx"
 
       - name: Build PDFbull (Release)
         run: cargo build --release
@@ -62,8 +44,6 @@ jobs:
           mkdir release_dist
           Copy-Item -Path "target/release/pdfbull.exe" -Destination "release_dist/"
           Copy-Item -Path "pdfium.dll" -Destination "release_dist/"
-          Copy-Item -Path "onnxruntime.dll" -Destination "release_dist/"
-          Copy-Item -Path "resources" -Destination "release_dist/resources" -Recurse
 
       - name: Install NSIS
         run: choco install nsis -y
@@ -77,12 +57,11 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: nightly
-          name: 'PDFbull Nightly Build (Pure Slint)'
-          body: 'This is an automated nightly build of the pure Slint version. It is significantly faster and lighter than the previous Tauri version.'
+          name: 'PDFbull Nightly Build'
+          body: 'This is an automated nightly build. It is significantly faster and lighter than the previous Tauri version.'
           files: |
             release_dist/pdfbull.exe
             release_dist/pdfium.dll
-            release_dist/onnxruntime.dll
             PDFbull-Setup.exe
           draft: false
           prerelease: true
